import { Tabs, usePathname, useRouter } from 'expo-router';
import {
  Home,
  BookOpen,
  TrendingUp,
  CheckSquare,
  User,
  ClipboardList,
} from 'lucide-react-native';
...
  {
    route: '/manage-tasks',
    name: 'manage-tasks',
    title: 'Manage',
    icon: ClipboardList,
  },
  { route: '/profile', name: 'profile', title: 'Profile', icon: User },
];

export default function TabLayout() {
  const { theme } = useTheme();
  const pathname = usePathname();
  const router = useRouter();
...
